# odd-box

./: .dockerignore  .gitignore  CaddyTest1  CaddyTest2  CaddyTest3  Cargo.toml  Config.toml  Dockerfile  Dockerfile.build  LICENSE  README.md  Readme.md  build_static_linux_bin_with_docker.sh  deps.tree  devbox.json  example-config.toml  flake.nix  odd-box-example-config-minimal.toml  odd-box-example-config.toml  odd-box-schema-v2.1.json  odd-box-schema-v2.2.json  odd-box-schema-v2.json  odd-box-schema-v3.0.json  odd-box-schema-v3.1.json  odd-box.toml  odd-box.toml.backup  odd-box.toml_backup  run_nix.sh  rust-toolchain.toml  shell.nix
.cargo/: config.toml
.devcontainer/: devcontainer.json  postcreate.sh
.github/workflows/: BuildAndTest.yml  attach_artifacts_to_release.yml  build_artifacts_without_release.yml  build_specific.yml  release.yml  rust.yml
docs/: CNAME  README.md  book.toml  cruma-migration.md  devbox.json  index.html
docs/book/: 404.html  CNAME  configuration.html  dns.html  docker.html  features.html  getting_started.html  index.html  installation.html  lets_encrypt.html  performance.html  searchindex.js  searchindex.json  security.html  tui.html  upgrading.html  webui.html  workflow.html
docs/book/css/: general.css  variables.css
docs/src/: SUMMARY.md  configuration.md  dns.md  docker.md  features.md  getting_started.md  installation.md  lets_encrypt.md  performance.md  readme.md  security.md  tui.md  upgrading.md  webui.md  workflow.md
docs/theme/: index.hbs
docs/theme/css/: variables.css
scratch/h2c/: Cargo.toml
scratch/h2c/src/: main.rs
src/: certs.rs  control.rs  cruma.rs  cruma_integration.rs  docker.rs  hyper_reverse_proxy.rs  init-cfg.toml  letsencrypt.rs  logging.rs  main.rs  observer.rs  proc_host.rs  proxy.rs  self_update.rs  serde_with.rs  tcp_pid.rs  tui.rs  types.rs
src/api/: mod.rs  readme.md
src/api/controllers/: mod.rs  settings.rs  sites.rs
src/configuration/: legacy.rs  mod.rs  reload.rs  v1.rs  v2.rs  v3.rs
src/custom_servers/: directory.rs  github_experiment.rs  mod.rs
src/http_proxy/: mod.rs  service.rs  utils.rs  websockets.rs
src/tcp_proxy/: h1_initial_parser.rs  h1_parser.rs  h2_parser.rs  http1.rs  http2.rs  managed_stream.rs  mod.rs  tcp.rs
src/tcp_proxy/tls/: client_hello.rs  extension.rs  mod.rs
src/tests/: configuration.rs  main.rs  mod.rs  proxy.rs
src/tui/: connections_widget.rs  logs_widget.rs  mod.rs  scroll_state_wrapper.rs  stats_widget.rs  threads_widget.rs
src/types/: app_state.rs  args.rs  connection_type.rs  custom_error.rs  mod.rs  odd_box_event.rs  proc_info.rs  proxy_state.rs  site_status.rs  tui_state.rs
static/: index.html
web-ui/: .env  README.md  bun.lockb  fetch-readme.js  global.css  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
web-ui/src/: generated-api.ts  global_tw.css  main.tsx  routeTree.gen.ts
web-ui/src/components/args-input/: args-input.tsx
web-ui/src/components/backend_modal/: backend_modal.tsx
web-ui/src/components/button/: button.tsx
web-ui/src/components/checkbox/: checkbox.tsx
web-ui/src/components/combobox/: site_search_box.tsx
web-ui/src/components/command/: command.tsx
web-ui/src/components/dialog/: dialog.tsx
web-ui/src/components/dialog/confirm/: confirm.tsx
web-ui/src/components/drawer/: context.tsx  dir-servers-list.tsx  directory_servers_menu_actions.tsx  drawer-styles.css  drawer.tsx  hosted-processes-list.tsx  hosted_processes_menu_actions.tsx  menu_item.tsx  remote-sites-list.tsx  remote_sites_menu_actions.tsx  sites-list-header.tsx  sites-list.tsx  status-icon.tsx
web-ui/src/components/footer/: footer-style.css  footer.tsx
web-ui/src/components/header/: header-style.css  header.tsx
web-ui/src/components/icons/: checkmark.tsx  cog.tsx  house.tsx  log.tsx  plus.tsx  plus2.tsx
web-ui/src/components/input/: input.tsx  styles.css
web-ui/src/components/key-value-input/: key-value-input.tsx  styles.css
web-ui/src/components/modal/: modal.tsx
web-ui/src/components/popover/: popover.tsx
web-ui/src/components/readme_viewer/: readme_viewer.tsx
web-ui/src/components/sheet/: sheet.tsx
web-ui/src/components/sheet/args_sheet/: args_sheet.tsx
web-ui/src/components/sheet/backend_sheet/: backend_sheet.tsx
web-ui/src/components/sheet/env_vars_sheet/: env_vars_sheet.tsx
web-ui/src/components/table/: table.tsx
web-ui/src/components/table/arguments/: arguments.tsx
web-ui/src/components/table/backends/: backends.tsx
web-ui/src/components/table/env_variables/: env_variables.tsx
web-ui/src/components/tabs/: tabs.tsx  types.ts
web-ui/src/components/ui/accordion/: index.tsx
web-ui/src/components/ui/badge/: index.tsx
web-ui/src/hooks/: use-dir-servers.ts  use-event-stream.ts  use-hosted-sites.ts  use-light-mode.ts  use-live-log.ts  use-remote-sites.ts  use-settings-mutations.ts  use-settings.ts  use-site-mutations.ts  use-site-status.ts
web-ui/src/lib/: env_vars_to_string.ts  get_url_friendly_url.ts  is_dir_server.ts  is_hosted_process.ts  is_remote_site.ts  setting_descriptions.ts  sleep.ts
web-ui/src/pages/home/: home-styles.css  home.tsx  info-card.tsx
web-ui/src/pages/login/: login.tsx
web-ui/src/pages/logs/: logs.tsx
web-ui/src/pages/new-dirserver/: new-dirserver-settings.tsx  new-dirserver.tsx
web-ui/src/pages/new-process/: new-hosted-process-settings.tsx  new-process.tsx
web-ui/src/pages/new-site/: new-hosted-process-settings.tsx  new-remote-site-settings.tsx  new-site.tsx
web-ui/src/pages/settings/: settings-item.tsx  settings-section.tsx  settings.tsx
web-ui/src/pages/site/: dir-server-settings.tsx  hosted-process-settings.tsx  remote-site-settings.tsx  site-logs.tsx  site-overview.tsx  site-settings.tsx  site.tsx  style.css
web-ui/src/providers/: live_logs.tsx  theme.tsx
web-ui/src/routes/: __root.tsx  index.lazy.tsx  index.tsx  login.tsx  logs.tsx  new-dirserver.lazy.tsx  new-process.lazy.tsx  new-site.lazy.tsx  settings.lazy.tsx  site.$siteName.lazy.tsx  site.tsx
web-ui/src/utils/: auth.tsx  cookies.tsx
(+7 files in other folders)
