[package]
name = "odd-box"
description = "dead simple reverse proxy server"
version = "0.1.3"
edition = "2021"
authors = ["Olof Blomqvist <olof@twnet.se>"]
repository = "https://github.com/OlofBlomqvist/odd-box"
license-file = "LICENSE"

[dependencies]
dirs = "5.0.1"
schemars = { version = "0.8.21", features = ["chrono"] }
futures-util = "0.3.30"
hyper = { version = "1.4.1" , features=["http2","client","server"] }
hyper-util = { version = "0.1.7", features = ["full"] }
regex = "1.9.5"
serde = { version = "1.0.88", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
tokio-tungstenite = { version="0.23.1" , features = ["__rustls-tls"] }
toml = "0.8.4"
tracing = "0.1.37"
tracing-subscriber = { version="0.3.18", features=[ "env-filter","std","fmt","time"] }
url = "2.4.1"
lazy_static = "1.4.0"
clap = { version="4.4.7", features=["derive"]}
rustls = "0.23.12"
tokio-rustls = "0.26.0"
rustls-pemfile = "2.0.0"
rcgen = { version = "0.13.1", features = ["aws_lc_rs","pem"] }
socket2 = "0.5.5"
hyper-tungstenite = "0.14.0"
ratatui = "0.28.1"
crossterm = { version = "0.28.1"  }
chrono = "0.4.31"
time = {version="0.3.36",features=["macros","formatting","parsing"]}
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.111"
self_update = "0.41.0"
bytes = "1.7.1"
http-body-util = "0.1.0"
hyper-rustls = { version = "0.27.2", features = ["http2"] }
http-body = "1.0.1"
tokio-stream = "0.1.15"
ctrlc = "3.2"
hpack = { version = "0.3.0"  }
webpki = { version = "0.22.4"  }
anyhow = "1.0.79"
uuid = { version = "1.7.0", features = ["v4"] }
tungstenite = "0.24.0"
dark-light = "1.0.0"
memchr = "2.7.4"
dashmap = "6.0.1"
base64 = "0.22.1"
josekit = "0.8.7"
ring = "0.17.8"
pem = "3.0.4"
rsa = "0.9.6"
jsonwebkey-convert = { version="0.3.0",features = ["pem_support"] }
num-bigint = "0.4.6"
simple_asn1 = { version = "=0.5.1", optional = true }
sha256 = "1.5.0"
sha2 = "0.10.8"
which = "6.0.3"
jsonwebtoken = "9.3.0"

# === MANAGEMENT API ============================================
axum = { version="0.7.5",features=["ws"] }
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "7.1.0", features = ["axum","vendored"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipauto = "0.1.10"
tower-http = { version = "0.5.2" , features = ["fs","cors","trace"]}
async-trait = "0.1.81"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
# ===============================================================

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32","Win32_Foundation","Win32_System","Win32_System_Console"] }



[profile.release]
opt-level = 'z'     # Optimize for size
#lto = true          # Enable link-time optimization
#codegen-units = 1   # Reduce number of codegen units to increase optimizations
#panic = 'abort'     # Abort on panic
#strip = true        # Strip symbols from binary*
#debug = false
