[package]
name = "odd-box"
description = "a dead simple reverse proxy server and web server"
version = "0.1.11-alpha2"
edition = "2021"
authors = ["Olof Blomqvist <olof@twnet.se>"]
repository = "https://github.com/OlofBlomqvist/odd-box"
license-file = "LICENSE"

[dependencies]

# === MANAGEMENT API ============================================
axum = { version="0.7.5",features=["ws"] }
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "7.1.0", features = ["axum","vendored"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipauto = "0.1.10"
tower = "0.4.4"
tower-http = { version = "0.5.2" , features = ["fs","cors","trace"]}
axum-extra = { version = "0.9.3", features = ["typed-header"] }
# ===============================================================
# === PROXY ====================================================
dirs = "5.0.1"
schemars = { version = "0.8.21", features = ["chrono"] }
futures-util = "0.3.31"
hyper = { version = "1.4.1" , features=["http2","client","server"] }
hyper-util = { version = "0.1.7", features = ["full"] }
regex = "1.9.5"
serde = { version = "1.0.88", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = { version="0.24.0" , features = ["__rustls-tls"] }
toml = "0.8.4"
tracing = "0.1.37"
tracing-subscriber = { version="0.3.18", features=[ "env-filter","std","fmt","time"] }
url = "2.4.1"
lazy_static = "1.4.0"
clap = { version="4.4.7", features=["derive"]}
rustls = { version = "0.23.19", features = ["ring","std","tls12"], default-features = false}
tokio-rustls = "0.26.0"
rustls-pemfile = "2.0.0"
rcgen = { version = "0.13.1", features = ["aws_lc_rs","pem"] }
socket2 = "0.5.5"
hyper-tungstenite = "0.15.0"
ratatui = "0.28.1"
crossterm = { version = "0.28.1"  }
chrono = { version = "0.4.38", features= ["serde"] }
time = {version="0.3.36",features=["macros","formatting","parsing"]}
reqwest = { version = "0.12.7", features = ["json","rustls-tls","native-tls-vendored"], default-features = false}
serde_json = "1.0.111"
self_update = "0.41.0"
bytes = "1.7.1"
http-body-util = "0.1.2"
hyper-rustls = { version = "0.27.3", features = ["http2","http1", "native-tokio","tls12"], default-features = false}
http-body = "1.0.1"
tokio-stream = "0.1.16"
ctrlc = "3.4.5"
fluke-hpack = { version = "0.3.1"  }
webpki = { version = "0.22.4"  }
anyhow = "1.0.88"
uuid = { version = "1.10.0", features = ["v4"] }
tungstenite = "0.24.0"
dark-light = "=1.0.0"
memchr = "2.7.4"
dashmap = "6.0.1"
base64 = "0.22.1"
ring = "0.17.8"
sha256 = "1.5.0"
sha2 = "0.10.8"
which = "6.0.3"
p256 = "0.13.2"
x509-parser = "0.16.0"
httparse = "1.9.4"
pin-project = "1.1.5"
futures = "0.3.30"
hpack-patched = "0.3.0"
include_dir = "0.7.4"
mime_guess = "2.0.5"
tokio-util = "0.7.12"
urlencoding = "2.1"

[target.'cfg(linux)'.dependencies]
procfs = "0.17.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0" }


markdown = "1.0.0-alpha.21"
flate2 = "1.0.34"
once_cell = "1.20.2"
notify = "6.1.1"
bollard = "0.18.1"
serde_with = "3.12.0"
#rsa = "0.9.6"
# ===============================================================



[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32","Win32_Foundation","Win32_System","Win32_System_Console","Win32_NetworkManagement_IpHelper"] }


[profile.release]
opt-level = 'z'     # Optimize for size
#lto = true          # Enable link-time optimization
#codegen-units = 1   # Reduce number of codegen units to increase optimizations
#panic = 'abort'     # Abort on panic
#strip = true        # Strip symbols from binary*
#debug = false
