[package]
name = "odd-box"
description = "a dead simple reverse proxy server and web server"
version = "0.1.13-RC2"
edition = "2021"
authors = ["Olof Blomqvist <olof@twnet.se>"]
repository = "https://github.com/OlofBlomqvist/odd-box"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0"
bollard = "0.18"
chrono = { version = "0.4", features= ["serde"] }
clap = { version="4.4", features=["derive"]}
cruma-tunnels-lib = { path = "../umbra-yurei/cruma-sdk/cruma-tunnels-lib"}
cruma-proxy-lib = { path = "../umbra-yurei/cruma-sdk/cruma-proxy-lib", features = ["hosting"]}
dashmap = "6.0"
lazy_static = "1.4"
notify = "6.1"
regex = "1.9"
reqwest = { version = "0.12", default-features = false, features = ["json","rustls-tls"] }
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12"
sysinfo = "0.33"
self_update = { version = "0.42", default-features = false, features = ["rustls"] }
time = {version="0.3",features=["macros","formatting","parsing"]}
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version="0.3", features=[ "env-filter","std","fmt","time"] }
uuid = { version = "1.10", features = ["v4"] }
utoipa = "5.3"
dirs = "5.0"
rustls = { version = "0.23", features = ["ring","std","tls12"], default-features = false}
ctrlc = "3.4"
which = "6.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = ["Win32","Win32_Foundation","Win32_System","Win32_System_Console","Win32_NetworkManagement_IpHelper"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0" }

[profile.release]
opt-level = 'z'     # Optimize for size
#lto = true          # Enable link-time optimization
#codegen-units = 1   # Reduce number of codegen units to increase optimizations
#panic = 'abort'     # Abort on panic
#strip = true        # Strip symbols from binary*
#debug = false
