[package]
name = "h2c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
futures = "0.3.30"
futures-channel = "0.3.30"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["client", "http2"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
tokio = { version = "1.36.0", features = ["full", "net"] }
tokio-stream = "0.1.14"
